Fixed stopping when bad internet Fixed playback and queuing Fixed sprites on mobile devices

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -420,6 +420,7 @@ body {
             user-select: none;
 
             background-size: auto 160px;
+            background-color: black;
           }
         }
 
